Fixed a bug (#10977) where the image editing options after uploading a file on the Publish page where misaligned.

--- a/themes/cp_themes/corporate/css/global.css
+++ b/themes/cp_themes/corporate/css/global.css
@@ -3600,7 +3600,11 @@ table.solo {
 	overflow: scroll;
 }
 
-
+.image_edit_form_options #image_edit_form .source label {
+	width:				auto;
+	margin-top: 		5px;
+	float: 				none;
+}
 
 #mainContent #image_edit_form label {
 	font-weight:		bold;
